--- a/www/manifest.json
+++ b/www/manifest.json
@@ -22,7 +22,8 @@
         "sizes": "512x512",
         "type": "image/png"
       }],
-  "start_url": "/?homescreen=1",
+  "start_url": "/index.html",
+  "scope": "/",
   "background_color": "#3E4EB8",
   "display": "standalone",
   "theme_color": "#2E3AA1"
